<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QUẢN LÝ NHÀ HÀNG</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Đăng nhập</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">QUẢN LÝ NHÀ HÀNG</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="gFloor">Ground Floor</string>
    <string name="firstFloor">First Floor</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="newOrder">Gọi món</string>
    <string name="ordered">Món đã gọi</string>
    <string name="checkBill">Thanh toán</string>
    <string name="cancel">Hủy</string>
    <string name="title_activity_menu">Thực đơn</string>
    <string name="image_of_food">Image of food</string>
    <string name="addFood">Thêm</string>
    <string name="hintSearchFood">Tìm món ăn</string>
    <string name="completeOrder">Xem order</string>
    <string name="quantity">SL:</string>
    <string name="price">Giá:</string>
    <string name="previewOrder">CHƯA ORDER</string>
    <string name="order">ĐÃ ORDER</string>
    <string name="confirmOrder">XÁC NHẬN ORDER</string>

</resources>
