<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnNewOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newOrder" />

    <Button
        android:id="@+id/btnOrdered"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ordered" />

    <Button
        android:id="@+id/btnCheckBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkBill" />

    <Button
        android:id="@+id/btnCancelOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
