<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textPass"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignRight="@+id/txtUsername"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textUsername"
        android:layout_below="@+id/textUsername"
        android:layout_marginTop="34dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="24dp"
        android:layout_marginTop="55dp"
        android:layout_toLeftOf="@+id/btnLogin"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textUsername"
        android:layout_alignBottom="@+id/textUsername"
        android:layout_alignLeft="@+id/btnLogin"
        android:ems="10"
        android:hint="@string/username" >

        <requestFocus />
    </EditText>

</RelativeLayout>
